--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -23,9 +23,11 @@ jobs:
       - name: Build solution
         run: msbuild Pipeline.sln /p:Configuration=Release
 
+      - name: Run analyzers and treat warnings as errors
+        run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
+
       - name: Run MSTest unit tests
-        run: |
-          vstest.console.exe Pipeline.Tests\bin\Release\TestProject.dll
+        run: '"C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" Pipeline.Tests\bin\Release\TestProject.dll'
 
       - name: Upload WPF build artifacts
         uses: actions/upload-artifact@v4
