--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -27,7 +27,9 @@ jobs:
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
       - name: Run MSTest unit tests
-        run: '"C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" Pipeline.Tests\bin\Release\TestProject.dll'
+        shell: pwsh
+        run: |
+            & "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" Pipeline.Tests\bin\Release\TestProject.dll
 
       - name: Upload WPF build artifacts
         uses: actions/upload-artifact@v4
