--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -26,10 +26,11 @@ jobs:
       - name: Run analyzers and treat warnings as errors
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
-      - name: Run MSTest unit tests
-        shell: pwsh
-        run: |
-            & "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" Pipeline.Tests\bin\Release\TestProject.dll
+      - name: Run tests with vstest
+        uses: microsoft/vstest-action@v1
+        with:
+          testSelector: 'testAssemblies'
+          testAssemblies: 'Pipeline.Tests\bin\Release\TestProject.dll'
 
       - name: Upload WPF build artifacts
         uses: actions/upload-artifact@v4
