--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -26,11 +26,10 @@ jobs:
       - name: Run analyzers and treat warnings as errors
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
-      - name: Run tests with vstest
-        uses: microsoft/vstest-action@v1
-        with:
-          testSelector: 'testAssemblies'
-          testAssemblies: 'Pipeline.Tests\bin\Release\TestProject.dll'
+      - name: Run MSTest unit tests
+        shell: pwsh
+        run: |
+            Get-Command vstest.console.exe | Select-Object -ExpandProperty Source
 
       - name: Upload WPF build artifacts
         uses: actions/upload-artifact@v4
