--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -26,12 +26,30 @@ jobs:
       - name: Run analyzers and treat warnings as errors
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
+      - name: Find vstest.console.exe
+        shell: pwsh
+        run: |
+          $vstestPath = Get-Command vstest.console.exe -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Source
+          if (-not $vstestPath) {
+            # Try default VS 2022 Enterprise path
+            $vstestPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe"
+            if (-not (Test-Path $vstestPath)) {
+              Write-Error "vstest.console.exe not found."
+              exit 1
+            }
+          }
+          Write-Output "vstest.console.exe found at $vstestPath"
+          echo "::set-output name=path::$vstestPath"
+      
       - name: Run MSTest tests
-        uses: microsoft/vstest-action@v1
-        with:
-          testSelector: 'testAssemblies'
-          testAssembly: '**\*Project.dll'        # This pattern picks all test dlls ending with Tests.dll
-          searchFolder: 'Pipeline.Tests\bin\Release'  # Point this to your test project's output folder
+        shell: pwsh
+        run: |
+          & ${{ steps.find-vstest.outputs.path }} Pipeline.Tests\bin\Release\*.Project.dll
+        id: run-tests
+      
+      # Note: For the 'Find vstest.console.exe' step, you need to set an id:
+      # id: find-vstest
+      
 
 
       - name: Upload WPF build artifacts
