--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -27,19 +27,26 @@ jobs:
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
       - name: Find vstest.console.exe
+        id: find-vstest
         shell: pwsh
         run: |
           $vstestPath = Get-Command vstest.console.exe -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Source
           if (-not $vstestPath) {
-            # Try default VS 2022 Enterprise path
-            $vstestPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe"
-            if (-not (Test-Path $vstestPath)) {
-              Write-Error "vstest.console.exe not found."
+            $fallbackPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe"
+            if (Test-Path $fallbackPath) {
+              Write-Output "vstest.console.exe found at fallback path: $fallbackPath"
+              $vstestPath = $fallbackPath
+            }
+            else {
+              Write-Error "vstest.console.exe not found in PATH or fallback path."
               exit 1
             }
           }
-          Write-Output "vstest.console.exe found at $vstestPath"
+          else {
+            Write-Output "vstest.console.exe found in PATH at: $vstestPath"
+          }
           echo "::set-output name=path::$vstestPath"
+
       
       - name: Run MSTest tests
         shell: pwsh
