--- a/.github/workflows/build-wpf.yml
+++ b/.github/workflows/build-wpf.yml
@@ -26,28 +26,9 @@ jobs:
       - name: Run analyzers and treat warnings as errors
         run: msbuild Pipeline.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
 
-      - name: Find vstest.console.exe
-        id: find-vstest
-        shell: pwsh
-        run: |
-          $vstestPath = Get-Command vstest.console.exe -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Source
-          if (-not $vstestPath) {
-            $fallbackPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe"
-            if (Test-Path $fallbackPath) {
-              Write-Output "vstest.console.exe found at fallback path: $fallbackPath"
-              $vstestPath = $fallbackPath
-            }
-            else {
-              Write-Error "vstest.console.exe not found in PATH or fallback path."
-              exit 1
-            }
-          }
-          else {
-            Write-Output "vstest.console.exe found in PATH at: $vstestPath"
-          }
-          echo "::set-output name=path::$vstestPath"
-
-      
+      - name: Install Visual Studio Test Platform
+        uses: microsoft/setup-vstest@v1
+        
       - name: Run MSTest tests
         shell: pwsh
         run: |
